<resources>
    <string name="app_name">Truss Pro Miami</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account ? Sign up</string>
    <string name="about_us">About us</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>

    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_sign_in">Already Have an Account ? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_product">Search any product</string>
    <string name="home">Home</string>
    <string name="categoty">Category</string>
    <string name="contact">Contact</string>
    <string name="view">View</string>
    <string name="contact_us">Contact Us</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>

    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="done">Done</string>
    <string name="select_language">Select Language</string>
    <string name="note">Note</string>
    <string name="app_lang_message">We notice you change app language, we need to restart app to completely reflect the new selected language.</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="my_photo">My Photo</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="account_information">Account Information</string>
    <string name="processing">Processing</string>
    <string name="loading">Loading</string>
    <string name="english">English</string>
    <string name="shop">Shop</string>

    <string name="banner_circle_tag" translatable="false">3</string>
    <string name="login_successfully">Login successfully</string>
    <string name="signup_successfully">SignUp successfully</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_email">Please enter your email</string>
    <string name="confirm_password">Confirm Password </string>
    <string name="chech_box">"Please checked Terms"</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="i_agree_to_the_terms">I agree to the terms*</string>
    <string name="add_to_cart">Add to Cart</string>

    //profile
    <!--Profile-->
    <string name="birth_date">Birth Date</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="enter_address">Enter address</string>
    <string name="home_address">State Address</string>
    <string name="enter_email_field">Enter email</string>
    <string name="personal_email">Personal Email</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_name">Enter name</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="whats_your_zip_code">Zip Code</string>
    <string name="enter_zip">Enter Zip</string>
    <string name="street_address">Street Address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="billing_address">Billing Address</string>
    <string name="enter_billing_address">Enter Billing Address</string>
    <string name="same_address_check_text"> My shipping address is same as billing</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="enter_shipping_address">Enter Shipping Address</string>
    <string name="total_price">Total Price :</string>
    <string name="place_your_order">Place your order</string>

    <string name="this_field_is_required_new">This field cannot be empty.</string>

</resources>
