<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order_black_24dp"
            android:title="@string/my_orders" />

    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />
    <item android:title="Feedback">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
        </menu>
    </item>
    <item android:title="About us">
        <menu>
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_about_black_24dp"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
