<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".views.fragments.ContactUsFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/ti_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:padding="1dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/ti_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:padding="1dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:padding="1dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/ti_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:padding="1dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:inputType="textEmailSubject" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/ti_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150dp"
        android:layout_margin="@dimen/_5dp"
        android:padding="1dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150dp"
            android:hint="@string/message"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <!--       <EditText
               android:id="@+id/et_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="10"
               android:layout_margin="@dimen/_5dp"
               android:padding="10dp"
               android:inputType="textPersonName"
               android:hint="@string/first_name"/>

           <EditText
               android:id="@+id/et_last_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/_5dp"
               android:padding="10dp"
               android:ems="10"
               android:inputType="textPersonName"
               android:hint="@string/last_name" />

           <EditText
               android:id="@+id/et_email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="10"
               android:layout_margin="@dimen/_5dp"
               android:padding="10dp"
               android:inputType="textEmailAddress"
               android:hint="@string/email" />

           <EditText
               android:id="@+id/et_subject"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="10"
               android:layout_margin="@dimen/_5dp"
               android:padding="10dp"
               android:inputType="textPersonName"
               android:hint="@string/subject" />

           <EditText
               android:id="@+id/et_message"
               android:layout_width="match_parent"
               android:layout_height="@dimen/_200dp"
               android:ems="10"
               android:layout_margin="@dimen/_5dp"
               android:padding="10dp"
               android:inputType="textPersonName"
               android:hint="@string/message" />-->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="Button" />
</LinearLayout>


