<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context=".views.activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20dp"
                android:src="@drawable/logopng" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@color/colorDarkGray"
                app:boxStrokeColor="@color/colorDarkGray"
                app:hintTextColor="@color/colorDarkGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorDarkGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@color/colorDarkGray"
                app:boxStrokeColor="@color/colorDarkGray"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorDarkGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    android:textColor="@color/colorDarkGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:text="Forgot Password"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>
</layout>
