<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/mtoolbar"
            layout="@layout/toolbar" />

        <RelativeLayout

            android:id="@+id/english_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/english"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageView

                android:id="@+id/iv_eng_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check_circle_black_24dp"
                android:visibility="gone" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTransMediumGray" />

        <RelativeLayout

            android:id="@+id/spanish_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/spanish"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_span_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check_circle_black_24dp"
                android:visibility="gone" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTransMediumGray" />

        <RelativeLayout

            android:id="@+id/portuguese_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/portuguese"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_port_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check_circle_black_24dp"
                android:visibility="gone" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTransMediumGray" />

    </LinearLayout>
</layout>